@@ -6,13 +6,14 @@ import org.testng.annotations.Test;
 
 import java.util.ArrayList;
 import java.util.Arrays;
+import java.util.List;
 
 public class WordsFromPhoneNumberTest extends ParentTest {
 
     @Test
     public void test000(){
         ArrayList<String> actual = WordsFromPhoneNumber.recursion("23");
-        printStrings(actual);
+        print(actual);
         ArrayList<String> expected = new ArrayList<>(Arrays.asList("ad", "ae","af","bd","be","bf","cd","ce","cf"));
         Assert.assertEquals(actual,expected);
     }
@@ -21,8 +22,8 @@ public class WordsFromPhoneNumberTest extends ParentTest {
     @Test
     public void test001(){
         ArrayList<String> actual = WordsFromPhoneNumber.recursion("01");
-        printStrings(actual);
-        ArrayList<String> expected = new ArrayList<>(Arrays.asList(""));
+        print(actual);
+        ArrayList<String> expected = new ArrayList<>(List.of(""));
         Assert.assertEquals(actual,expected);
     }
 }
